--- a/source/index.html
+++ b/source/index.html
@@ -131,7 +131,7 @@
             <source type="image/webp" media="(min-width: 768px)" srcset="img/before-tablet@2x.webp 2x, img/before-tablet@1x.webp 1x">
             <source type="image/webp" srcset="img/before-mobile@2x.webp 2x, img/before-mobile@1x.webp 1x">
             <source media="(min-width: 1300px)" srcset="img/before-desktop@2x.png 2x, img/before-desktop@1x.png 1x">
-            <source media="(min-width: 768px)" srcset="img/before-tablet@2x.jpg 2x, img/before-tablet@1x.jpg 1x">
+            <source media="(min-width: 768px)" srcset="img/before-tablet@2x.png 2x, img/before-tablet@1x.png 1x">
             <img class="example__img example__img--before" src="img/before-mobile@1x.png" width="300" height="230" alt="Кот в начале диеты">
           </picture>
           <picture>
@@ -139,7 +139,7 @@
             <source type="image/webp" media="(min-width: 768px)" srcset="img/after-tablet@2x.webp 2x, img/after-tablet@1x.webp 1x">
             <source type="image/webp" srcset="img/after-mobile@2x.webp 2x, img/after-mobile@1x.webp 1x">
             <source media="(min-width: 1300px)" srcset="img/after-desktop@2x.png 2x, img/after-desktop@1x.png 1x">
-            <source media="(min-width: 768px)" srcset="img/after-tablet@2x.jpg 2x, img/after-tablet@1x.jpg 1x">
+            <source media="(min-width: 768px)" srcset="img/after-tablet@2x.png 2x, img/after-tablet@1x.png 1x">
             <img class="example__img example__img--after" src="img/after-mobile@1x.png" width="300" height="230" alt="Кот в конце диеты">
             <!-- width="300" -->
             <!-- style="width: 50%" -->
